--- a/service_a/Dockerfile
+++ b/service_a/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     make \
     wget \
     git \
+    libmysqlcppconn-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory for the build process
@@ -22,7 +23,7 @@ RUN git clone https://github.com/CrowCpp/Crow.git crow
 COPY . .
 
 # Build the application using g++
-RUN g++ -Icrow/include -Iasio/asio/include -o service_a main.cpp -lsqlite3 -lpthread
+RUN g++ -Icrow/include -Iasio/asio/include -L/usr/local/lib -o service_a main.cpp -lsqlite3 -lpthread -lmysqlcppconn
 
 # Stage 2: Runtime Stage
 # Use an official GCC image (same as the build stage) for runtime
@@ -31,6 +32,7 @@ FROM gcc:14.2.0
 # Install only the runtime dependencies needed to run the app
 RUN apt-get update && apt-get install -y \
     libsqlite3-0 \
+    libmysqlcppconn-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory for the runtime container
