--- a/compose.yaml
+++ b/compose.yaml
@@ -27,8 +27,13 @@ services:
       context: ./service_b
     environment:
       NODE_ENV: production
+      REDIS_HOST: cache
+      REDIS_PORT: 6379
+      REDIS_PASSWORD: eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
     ports:
       - 8090:8080
+    depends_on:
+      - cache
     develop:
       watch:
         - action: rebuild
@@ -71,6 +76,17 @@ services:
         condition: service_healthy
         restart: true
         
+  cache:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - 6379:6379
+    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+    volumes:
+      - cache:/data
+
 volumes:
-  mysql-data:    
-    
+  mysql-data:
+  cache:
+    driver: local
+  
