--- a/service_b/Dockerfile
+++ b/service_b/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y \
     git \
     libcurlpp-dev \
     libboost-dev \
+    libhiredis-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory for the build process
@@ -23,7 +24,7 @@ RUN git clone https://github.com/CrowCpp/Crow.git crow
 COPY . .
 
 # Build the application using g++
-RUN g++ -Icrow/include -Iasio/asio/include -L/usr/local/lib -o service_b main.cpp -lpthread -lcurlpp -lcurl
+RUN g++ -Icrow/include -Iasio/asio/include -L/usr/local/lib -o service_b main.cpp -lpthread -lcurlpp -lcurl -lhiredis -lssl -lcrypto
 
 # Stage 2: Runtime Stage
 # Use an official GCC image (same as the build stage) for runtime
@@ -33,6 +34,7 @@ FROM gcc:14.2.0
 RUN apt-get update && apt-get install -y \
     libcurlpp-dev \
     libboost-dev \
+    libhiredis-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory for the runtime container
