--- a/service_a/Dockerfile
+++ b/service_a/Dockerfile
@@ -22,7 +22,8 @@ RUN git clone https://github.com/CrowCpp/Crow.git crow
 COPY . .
 
 # Build the application using g++
-RUN g++ -Icrow/include -Iasio/asio/include -Icurlpp/include -L/usr/local/lib -o service_a main.cpp -lpthread -lmysqlcppconn -lssl -lcrypto
+RUN g++ -c -Icrow/include -Iasio/asio/include -L/usr/local/lib utils.cpp -lssl -lcrypto
+RUN g++ -Icrow/include -Iasio/asio/include -Icurlpp/include -L/usr/local/lib -o service_a main.cpp utils.o -lpthread -lmysqlcppconn -lssl -lcrypto
 
 # Stage 2: Runtime Stage
 # Use an official GCC image (same as the build stage) for runtime
